--- a/list3.css
+++ b/list3.css
@@ -8,7 +8,8 @@ body {
 
 header,
 footer {
-  background: #eee;
+  background: #6B4F3C;
+  color: #f5e9da;
   text-align: center;
   padding: 1em;
 }
@@ -17,6 +18,7 @@ main {
   padding: 2em;
   max-width: 800px;
   margin: auto;
+  background-color: #F5EFE6;
 }
 
 img {
@@ -53,6 +55,8 @@ img {
   width: 90px;
   height: 120px;
   background: #ddd;
+  border-radius: 6px;
+  object-fit: cover;
 }
 
 .banner {
@@ -68,3 +72,14 @@ img {
 div.img {
   text-align: center;
 }
+
+a {
+  display: inline-block;
+  padding: 0.5em 1em;
+  background: #D99F3C;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background 0.3s;
+}
+
