--- a/list1.css
+++ b/list1.css
@@ -7,7 +7,7 @@ body {
   line-height: 1.6;
 
   background-size: auto 100%;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center top;
   background-attachment: fixed;
   background-color: #000;
@@ -20,9 +20,16 @@ header {
   text-align: center;
 }
 
+
 header h1 {
+  font-family: 'Zen Kaku Gothic New', sans-serif;
+  font-size: 3.2rem;
+  font-weight: 900;
   color: #ffffff;
+  letter-spacing: 0.05em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
 }
+
 
 main {
   padding: 2rem;
@@ -39,7 +46,7 @@ main {
 
 .store-list li {
   display: flex;
-  background-color: rgba(51, 51, 51, 0.85);
+  background-color: #faffd0;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -47,36 +54,34 @@ main {
 }
 
 .store-list img {
-  width: 180px;
-  height: 120px;
+  width: auto;
+  height: auto;
   object-fit: cover;
-  background-color: #555;
 }
 
 .store-list div {
   padding: 1rem;
 }
 
-.store-list h2 {
+.store-list h3 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  color: #4e9eff;
-  font-size: 1.2rem;
+  font-size: 3rem letter-spacing;
+  text-shadow: 2px 2px 4px rgba(255, 44, 44, 0.6);
+}
+
+.store-list h3 {
+  font-size: 2.5rem
 }
 
 .store-list p {
   margin: 0 0 0.8rem;
-  color: #aaaaaa;
-}
-
-.store-list a2 {
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: bold;
+  color: #000000;
+  font-size: 1.5rem;
 }
 
 .store-list a {
-  color: #4e9eff;
+  color: #1500ff;
   text-decoration: none;
   font-weight: bold;
 }
